--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer utilities {
+  input[type='range'].slider::-webkit-slider-thumb {
+    @apply appearance-none w-6 h-6 bg-purple-700 rounded-full cursor-pointer shadow-lg border-4 border-white;
+  }
+  input[type='range'].slider::-moz-range-thumb {
+    @apply w-6 h-6 bg-purple-700 rounded-full cursor-pointer shadow-lg border-4 border-white;
+  }
+  input[type='range'].slider::-webkit-slider-thumb:hover {
+    @apply bg-purple-800 scale-110;
+  }
+  input[type='range'].slider::-moz-range-thumb:hover {
+    @apply bg-purple-800 scale-110;
+  }
+}
